--- a/selector-dropdown-list/index.html
+++ b/selector-dropdown-list/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi Selector</title>
+    <title>Exemplo de selector dropdown list - https://github.com/avferreira/selector-dropdown-list-using-js-css</title>
+    
     <style>
         * {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 
@@ -61,7 +62,7 @@
         }
 
         .options-container .option:hover {
-            background-color: #414b57;  /* aliceblue; */
+            background-color: #414b57; 
             color: aliceblue;
         }
 
