Reorganização de páginas

--- a/selector-dropdown-list/selector-dropdown-list.html
+++ b/selector-dropdown-list/selector-dropdown-list.html
@@ -82,7 +82,6 @@
             padding-top: 6px;
             padding-left: 10px;
             display: flex;
-            flex-direction: column;
         }
 
         .show {
@@ -110,7 +109,7 @@
             <label for="option1" class="option">
                 <input type="radio" name="radioLogradouro" id="option1">
                 Avenida Manoel Ribas - até 324/325
-                <span class="cep">80510-020</span>
+                <span class="cep" >80510-020</span>
                 <span>Curitiba/PR</span>
                 <span>São Francisco</span>
             </label>
@@ -186,6 +185,8 @@
             </label>
         </div>
     </div>
+    <br/>
+    <a href="..\index.html">Voltar para a página Home</a>
 
     <script>
 
