--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Página Home</h1>
-    <a href="selector-dropdown-list\selector-dropdown-list.html">Ir para a página selector-dropdown-list</a>
+    <a href="selector-dropdown-list\selector-dropdown-list.html">Ir para a página selector-dropdown-list</a><br>
+    <a href="selector-checkbox-inside-select-option\selector-checkbox-inside-select-option.html">Ir para a página selector-checkbox-inside-select-option</a><br>
+    
 </body>
 </html>
