--- a/selector-dropdown-list/selector-dropdown-list002.html
+++ b/selector-dropdown-list/selector-dropdown-list002.html
@@ -85,7 +85,7 @@
             display: none;
         }            
 
-        .input-radio:checked + .option-text1 {
+        .input-radio:checked + .option-text1, .option-text2 {
             font-weight: bold;
         }
 
