--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Página Home</h1>
     <a href="selector-dropdown-list\selector-dropdown-list001.html">Ir para a página selector-dropdown-list001</a><br>
     <a href="selector-dropdown-list\selector-dropdown-list002.html">Ir para a página selector-dropdown-list002</a><br>
+    <a href="selector-dropdown-list\selector-dropdown-list003.html">Ir para a página selector-dropdown-list003</a><br>
     <a href="selector-checkbox-inside-select-option\selector-checkbox-inside-select-option.html">Ir para a página selector-checkbox-inside-select-option</a><br>
     <a href="custom-checkox-001\custom-checkox-001.html">Ir para a página Custom Checkbox 001</a><br>
     <a href="custom-form-validator\customFormValidator.html">Ir para a página Custom Form Validator</a><br>
